# QuickAPI

./: .gitignore  LICENSE  README.md  SECURITY_MODEL.md  pyproject.toml
docs/: DISCOVERY.md  INSTALL.md  architecture.md  roadmap.md
examples/basic_api/: main.py
examples/ecommerce_api/: main.py
examples/ml_guard/: main.py
examples/native_endpoint/: main.py  native_score.cpp
quickapi/: __init__.py  asgi.py  dependencies.py  middleware.py
quickapi/agents/: __init__.py  backend.py
quickapi/app/: __init__.py  application.py  config.py  lifecycle.py
quickapi/bridge/: __init__.py  loader.py  native_bridge.py  native_router.py  native_runtime.py
quickapi/cache/: __init__.py  memory.py
quickapi/native/: CMakeLists.txt  __init__.py
quickapi/native/bench/: quick_native_bench.cpp
quickapi/native/core/: quick_buffer.cpp  quick_buffer.h  quick_core.c  quick_core.h  quick_memory.cpp  quick_memory.h  quick_result.h  quick_string.cpp  quick_string.h
quickapi/native/http/: quick_file_stream.cpp  quick_file_stream.h  quick_http.cpp  quick_http.h  quick_listener.cpp  quick_listener.h  quick_request.cpp  quick_request.h  quick_response.cpp  quick_response.h
quickapi/native/isolate/: quick_isolate.cpp  quick_isolate.h
quickapi/native/jobs/: quick_job_queue.cpp  quick_job_queue.h
quickapi/native/json/: quick_json.cpp  quick_json.h  quick_json_writer.cpp  quick_json_writer.h
quickapi/native/loader/: quick_native_loader.cpp  quick_native_loader.h
quickapi/native/metrics/: quick_metrics.cpp  quick_metrics.h
quickapi/native/ml/: quick_policy.cpp  quick_policy.h
quickapi/native/plugins/: quick_plugin.cpp  quick_plugin.h
quickapi/native/router/: quick_router.cpp  quick_router.h
quickapi/native/security/: quick_security.cpp  quick_security.h
quickapi/native/validation/: quick_validation.cpp  quick_validation.h
scripts/: build_native.cmd
(+89 files in other folders)
