[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quickapi-runtime"
version = "0.1.0"
description = "JSON-first API runtime with a Python developer layer and future-ready native core."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "QuickAPI" }]
license = "GPL-3.0-only"
keywords = ["api", "json", "runtime", "native", "ml"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.scripts]
quickapi = "quickapi.cli.main:main"

[tool.setuptools.packages.find]
include = ["quickapi*"]

[tool.setuptools.package-data]
quickapi = ["native/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
